#711 - Fixed spacing issue on user timeline toolbar

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_update_form.scss
@@ -528,7 +528,7 @@ input.search-query-input {
 	.bbp-topic-form #whats-new-toolbar {
 
 		.medium-editor-toolbar-actions {
-			padding: 0 6px 10px;
+			padding: 0 0 10px;
 
 			button {
 				padding: 10px 0;
