--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -1492,7 +1492,7 @@ input.search-query-input {
 @media screen and (max-width: 560px) {
   .activity-update-form .activity-form.focus-in #whats-new-content .medium-editor-toolbar-actions,
   .bbp-topic-form #whats-new-toolbar .medium-editor-toolbar-actions {
-    padding: 0 6px 10px;
+    padding: 0 0 10px;
   }
   .activity-update-form .activity-form.focus-in #whats-new-content .medium-editor-toolbar-actions button,
   .bbp-topic-form #whats-new-toolbar .medium-editor-toolbar-actions button {
